Securing HTTP -> HTTPS - Add Certificates - Modify Links and change Actuator in a separate Server (PORT)

--- a/diary.adoc
+++ b/diary.adoc
@@ -25,3 +25,9 @@
 * Add Gatling Module for Performance / Balancing Tests
 * Activate Rest Module Balancing.
 (Simply http:// -> lb://)
+
+## Day 5
+
+* Add HTTPS Layer on Gateway
+* Modify Actuator for Gateway HTTP/HTTPS
+
