--- a/readme.adoc
+++ b/readme.adoc
@@ -1,11 +1,11 @@
 # Spring Boot Challenge
 
-This is a private challenge to build a Spring Boot Environnment on the latest feature and releases.
+This is a private challenge to build a Spring Boot Environment on the latest feature and releases.
 It will progress day by day.
 
-http://127.0.0.1:8080/actuator-service
+https://127.0.0.1:8080/actuator-service
 
-http://127.0.0.1:8080/eureka-service
+https://127.0.0.1:8080/eureka-service
 
-http://127.0.0.1:8080/hello-service/hello
+https://127.0.0.1:8080/hello-service/hello
 
