Add Spring Boot Authentication Server - Add new Module Authentication Server for OAuth2 - Configuration of Entry Points and Actuator

--- a/diary.adoc
+++ b/diary.adoc
@@ -34,4 +34,11 @@
 ## Day 6
 
 * Apply Security to API Gateway
-* Add  Basic Security Rules
+* Add Basic Security Rules
+
+## Day 6
+
+* Add OAuth Authentication Server
+* Add new Spring Boot Authentication Module
+* Define Security Policies include Actuator
+* Open Points: Link Module with API Gateway
