--- a/readme.adoc
+++ b/readme.adoc
@@ -3,6 +3,14 @@
 This is a private challenge to build a Spring Boot Environment on the latest feature and releases.
 It will progress day by day.
 
+Based on: https://spring.io/microservices
+
+image::doc/challenge.png[]
+
+image::doc/actuator.png[]
+
+Current links exposed by the API Gateway:
+
 https://127.0.0.1:8080/actuator-service
 
 https://127.0.0.1:8080/eureka-service
